# aws-custom-resource-provider

./: Cargo.toml
aws-custom-resource-provider-events/: Cargo.toml
aws-custom-resource-provider-events/src/: lib.rs
aws-custom-resource-provider-example/: Cargo.toml
aws-custom-resource-provider-example/src/: main.rs
aws-custom-resource-provider-lambda/: Cargo.toml
aws-custom-resource-provider-lambda/src/: error.rs  lib.rs  types.rs
